--- a/WindowsFormsApp3/ReportGuiNhanBPham.rdlc
+++ b/WindowsFormsApp3/ReportGuiNhanBPham.rdlc
@@ -6,22 +6,22 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>1.49458cm</Width>
+              <Width>0.58047cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.44179cm</Width>
+              <Width>2.35965cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.44179cm</Width>
+              <Width>3.33167cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>3.31492cm</Width>
+              <Width>4.3601cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>9.02992cm</Width>
+              <Width>6.05979cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.44179cm</Width>
+              <Width>2.22099cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -90,36 +90,6 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="Textbox2">
-                      <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
-                      <Paragraphs>
-                        <Paragraph>
-                          <TextRuns>
-                            <TextRun>
-                              <Value>Đơn Vị Gửi</Value>
-                              <Style />
-                            </TextRun>
-                          </TextRuns>
-                          <Style />
-                        </Paragraph>
-                      </Paragraphs>
-                      <rd:DefaultName>Textbox2</rd:DefaultName>
-                      <Style>
-                        <Border>
-                          <Color>LightGrey</Color>
-                          <Style>Solid</Style>
-                        </Border>
-                        <PaddingLeft>2pt</PaddingLeft>
-                        <PaddingRight>2pt</PaddingRight>
-                        <PaddingTop>2pt</PaddingTop>
-                        <PaddingBottom>2pt</PaddingBottom>
-                      </Style>
-                    </Textbox>
-                  </CellContents>
-                </TablixCell>
-                <TablixCell>
-                  <CellContents>
                     <Textbox Name="Textbox4">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
@@ -135,6 +105,36 @@
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox4</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Color>LightGrey</Color>
+                          <Style>Solid</Style>
+                        </Border>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox10">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>Nội Dung Gửi</Value>
+                              <Style />
+                            </TextRun>
+                          </TextRuns>
+                          <Style />
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox2</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>LightGrey</Color>
@@ -275,36 +275,6 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="Textbox3">
-                      <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
-                      <Paragraphs>
-                        <Paragraph>
-                          <TextRuns>
-                            <TextRun>
-                              <Value />
-                              <Style />
-                            </TextRun>
-                          </TextRuns>
-                          <Style />
-                        </Paragraph>
-                      </Paragraphs>
-                      <rd:DefaultName>Textbox3</rd:DefaultName>
-                      <Style>
-                        <Border>
-                          <Color>LightGrey</Color>
-                          <Style>Solid</Style>
-                        </Border>
-                        <PaddingLeft>2pt</PaddingLeft>
-                        <PaddingRight>2pt</PaddingRight>
-                        <PaddingTop>2pt</PaddingTop>
-                        <PaddingBottom>2pt</PaddingBottom>
-                      </Style>
-                    </Textbox>
-                  </CellContents>
-                </TablixCell>
-                <TablixCell>
-                  <CellContents>
                     <Textbox Name="SOHIEUBUUPHAM">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
@@ -320,6 +290,36 @@
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>SOHIEUBUUPHAM</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Color>LightGrey</Color>
+                          <Style>Solid</Style>
+                        </Border>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox8">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value />
+                              <Style />
+                            </TextRun>
+                          </TextRuns>
+                          <Style />
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox8</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>LightGrey</Color>
@@ -417,11 +417,11 @@
             </TablixMember>
           </TablixMembers>
         </TablixRowHierarchy>
-        <DataSetName>guiBuuPham</DataSetName>
-        <Top>0.49953cm</Top>
-        <Left>0.76412cm</Left>
+        <DataSetName>nhapguibuupham</DataSetName>
+        <Top>0.25cm</Top>
+        <Left>0cm</Left>
         <Height>1.2cm</Height>
-        <Width>21.16479cm</Width>
+        <Width>18.91266cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -429,10 +429,10 @@
         </Style>
       </Tablix>
     </ReportItems>
-    <Height>8.81063cm</Height>
+    <Height>10cm</Height>
     <Style />
   </Body>
-  <Width>22.93433cm</Width>
+  <Width>19cm</Width>
   <Page>
     <PageHeader>
       <Height>2.5812cm</Height>
@@ -458,8 +458,8 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox11</rd:DefaultName>
-          <Top>0.65828cm</Top>
-          <Left>7.74912cm</Left>
+          <Top>0.49015cm</Top>
+          <Left>5.87058cm</Left>
           <Height>0.65292cm</Height>
           <Width>7.84458cm</Width>
           <Style>
@@ -540,7 +540,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>="Tờ: "+Globals!PageNumber +"/"+Globals!TotalPages</Value>
+                  <Value>="Tờ: "+Globals!PageNumber.ToString()+"/"+Globals!TotalPages.ToString()</Value>
                   <Style />
                 </TextRun>
               </TextRuns>
@@ -549,7 +549,7 @@
           </Paragraphs>
           <rd:DefaultName>Textbox16</rd:DefaultName>
           <Top>1.31946cm</Top>
-          <Left>17.28578cm</Left>
+          <Left>14.26953cm</Left>
           <Height>0.6cm</Height>
           <Width>4.64313cm</Width>
           <ZIndex>3</ZIndex>
@@ -582,83 +582,27 @@
     </PageFooter>
     <PageHeight>29.7cm</PageHeight>
     <PageWidth>21cm</PageWidth>
-    <LeftMargin>2.54cm</LeftMargin>
-    <RightMargin>2.54cm</RightMargin>
-    <TopMargin>2.54cm</TopMargin>
-    <BottomMargin>2.54cm</BottomMargin>
-    <ColumnSpacing>1.27cm</ColumnSpacing>
+    <LeftMargin>1cm</LeftMargin>
+    <RightMargin>1cm</RightMargin>
+    <TopMargin>1cm</TopMargin>
+    <BottomMargin>1cm</BottomMargin>
+    <ColumnSpacing>0cm</ColumnSpacing>
     <Style />
   </Page>
   <AutoRefresh>0</AutoRefresh>
   <DataSources>
-    <DataSource Name="rpcDataSet">
+    <DataSource Name="DataSetGuiNhanBuuPham">
       <ConnectionProperties>
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>da55935f-766e-4062-a93f-3bae53f5c93a</rd:DataSourceID>
+      <rd:DataSourceID>71a9cb2e-2234-4c97-8f25-1d1a13441ebc</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
-    <DataSet Name="viewGuiNhanLieuKe">
+    <DataSet Name="nhapguibuupham">
       <Query>
-        <DataSourceName>rpcDataSet</DataSourceName>
-        <CommandText>/* Local Query */</CommandText>
-      </Query>
-      <Fields>
-        <Field Name="MASO">
-          <DataField>MASO</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="NGAYNHANLK">
-          <DataField>NGAYNHANLK</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="DotNhan">
-          <DataField>DotNhan</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="SLNhan">
-          <DataField>SL Nhan</DataField>
-          <rd:TypeName>System.Int32</rd:TypeName>
-        </Field>
-        <Field Name="DOTPHATTIEP">
-          <DataField>DOTPHATTIEP</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="SLGui">
-          <DataField>SL Gui</DataField>
-          <rd:TypeName>System.Int32</rd:TypeName>
-        </Field>
-        <Field Name="NGAYGUILK">
-          <DataField>NGAYGUILK</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="CHUAN">
-          <DataField>CHUAN</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="TENDONVI">
-          <DataField>TENDONVI</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="TINH">
-          <DataField>TINH</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-      </Fields>
-      <rd:DataSetInfo>
-        <rd:DataSetName>rpcDataSet</rd:DataSetName>
-        <rd:SchemaPath>C:\Users\PC1\source\repos\WindowsFormsApp3\WindowsFormsApp3\rpcDataSet.xsd</rd:SchemaPath>
-        <rd:TableName>guinhanlieuke</rd:TableName>
-        <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
-        <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
-        <rd:TableAdapterName>guinhanlieukeTableAdapter</rd:TableAdapterName>
-      </rd:DataSetInfo>
-    </DataSet>
-    <DataSet Name="guiBuuPham">
-      <Query>
-        <DataSourceName>rpcDataSet</DataSourceName>
+        <DataSourceName>DataSetGuiNhanBuuPham</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
@@ -708,8 +652,8 @@
         </Field>
       </Fields>
       <rd:DataSetInfo>
-        <rd:DataSetName>rpcDataSet</rd:DataSetName>
-        <rd:SchemaPath>C:\Users\PC1\source\repos\WindowsFormsApp3\WindowsFormsApp3\rpcDataSet.xsd</rd:SchemaPath>
+        <rd:DataSetName>DataSetGuiNhanBuuPham</rd:DataSetName>
+        <rd:SchemaPath>C:\Users\PC1\source\repos\WindowsFormsApp3\WindowsFormsApp3\DataSetGuiNhanBuuPham.xsd</rd:SchemaPath>
         <rd:TableName>nhapguibuupham</rd:TableName>
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
